--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/Create.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/Create.cshtml
@@ -1,8 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-
-@model List<MyFitnessJourney.Web.Models.Exercise.ExerciseViewModel>
+﻿@model List<MyFitnessJourney.Web.Models.Exercise.ExerciseViewModel>
 
 <form asp-action="Create" method="post">
     <label for="exercise">Exercise</label>
