--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/GetAll.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/GetAll.cshtml
@@ -1,28 +1,43 @@
 ﻿@model List<MyFitnessJourney.Web.Models.PersonalBest.PersonalBestViewModel>
 
-<table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
-    <thead style="background-color: #f2f2f2;">
-        <tr>
-            <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Exercise</th>
-            <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Weight (kg)</th>
-            <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Date</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td style="padding: 10px; border: 1px solid #ddd;">
-                    <a asp-controller="PersonalBest"
-                       asp-action="GetPerExercise"
-                       asp-route-exerciseId="@item.ExerciseId"
-                       style="text-decoration: none; color: #007bff;">
-                        @item.Exercise
-                    </a>
-                </td>
-                <td style="padding: 10px; border: 1px solid #ddd;">@item.Weight</td>
-                <td style="padding: 10px; border: 1px solid #ddd;">@item.Date</td>
-            </tr>
-        }
-    </tbody>
-</table>
+@{
+    ViewData["Title"] = "All Personal Records";
+}
+
+@{
+    if (Model.Count == 0)
+    {
+        <h1>You don't have any PRs yet.</h1>
+    }
+    else
+    {
+        <h1>@ViewData["Title"]</h1>
+
+        <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+            <thead style="background-color: #f2f2f2;">
+                <tr>
+                    <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Exercise</th>
+                    <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Weight (kg)</th>
+                    <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td style="padding: 10px; border: 1px solid #ddd;">
+                            <a asp-controller="PersonalBest"
+                               asp-action="GetPerExercise"
+                               asp-route-exerciseId="@item.ExerciseId"
+                               style="text-decoration: none; color: #007bff;">
+                                @item.Exercise
+                            </a>
+                        </td>
+                        <td style="padding: 10px; border: 1px solid #ddd;">@item.Weight</td>
+                        <td style="padding: 10px; border: 1px solid #ddd;">@item.Date</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+}
