--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/GetPerExercise.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/PersonalBest/GetPerExercise.cshtml
@@ -7,6 +7,7 @@
         <tr>
             <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Weight (kg)</th>
             <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Date</th>
+            <th style="padding: 10px; border: 1px solid #ddd; text-align: left;">Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +16,11 @@
             <tr>
                 <td style="padding: 10px; border: 1px solid #ddd;">@item.Weight</td>
                 <td style="padding: 10px; border: 1px solid #ddd;">@item.Date</td>
+                <td style="padding: 10px; border: 1px solid #ddd;">
+                    <form asp-action="Delete" asp-route-id="@item.Id" method="post" style="display: inline;">
+                        <a class="text-danger" asp-action="Delete" asp-controller="PersonalBest" asp-route-id="@item.Id">Delete</a>
+                    </form>
+                </td>
             </tr>
         }
     </tbody>
