--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
@@ -42,9 +42,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="WorkoutProgram" asp-action="Create">Create Program</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Weight" asp-action="Create">Add Weight</a>
-                            </li>
+                            @* <li class="nav-item"> *@
+                            @*     <a class="nav-link text-dark" asp-area="" asp-controller="Weight" asp-action="Create">Add Weight</a> *@
+                            @* </li> *@
                         }
                     </ul>
                     <partial name="_LoginPartial" />
