--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">My Fitness Journey</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+                        aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -42,9 +42,12 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="WorkoutProgram" asp-action="Create">Create Program</a>
                             </li>
-                            @* <li class="nav-item"> *@
-                            @*     <a class="nav-link text-dark" asp-area="" asp-controller="Weight" asp-action="Create">Add Weight</a> *@
-                            @* </li> *@
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Measure" asp-action="Create">Add Weight</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Measure" asp-action="GetAll">My Body Weights</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
