Refactored WorkoutProgramController by moving logic to WorkoutProgramService.

--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/GetAll.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/GetAll.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MyFitnessJourney.Service.Models.MeasureServiceModel>
+﻿@using MyFitnessJourney.Service.Models.Measure
+@model IEnumerable<MeasureServiceModel>
 
 @{
     ViewData["Title"] = "Measures List";
