--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyFitnessJourney.Web.Models.WorkoutProgram.CreateWorkoutProgramModel>
+﻿@model List<MyFitnessJourney.Service.Models.WorkoutProgram.CreateWorkoutProgramModelServiceModel>
 
 @{
     ViewData["Title"] = "All Workout Programs";
