--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/Create.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model MyFitnessJourney.Service.Models.MeasureServiceModel
+﻿@using MyFitnessJourney.Service.Models.Measure
+@model MeasureServiceModel
 
 @{
     ViewData["Title"] = "Add Measure";
