--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Exercise/Create.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Exercise/Create.cshtml
@@ -1,8 +1,16 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model MyFitnessJourney.Web.Models.Exercise.CreateExerciseModel
 
 <form asp-action="Create" asp-controller="Exercise" method="post">
-    <input type="text" id="name" name="name" />
-    <button type="submit">Save</button>
+    <div class="form-group">
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
 </form>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
