--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/Create.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Measure/Create.cshtml
@@ -24,3 +24,9 @@
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
 </form>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
