--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
@@ -8,10 +8,12 @@
     if (Model.Count == 0)
     {
         <h1>You don't have any programs yet.</h1>
+        <a asp-action="Create" class="btn btn-primary">Add New Program</a>
     }
     else
     {
         <h1>@ViewData["Title"]</h1>
+        <a asp-action="Create" class="btn btn-primary">Add New Program</a>
 
         int count = 1;
 
