--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Measure" asp-action="GetAll">My Body Weights</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Exercise" asp-action="Create">Add Exercise</a>
+                            </li>
                             @* <li class="nav-item"> *@
                             @*     <a class="nav-link text-dark" asp-area="" asp-controller="PersonalBest" asp-action="Create">Add PR</a> *@
                             @* </li> *@
@@ -44,9 +47,6 @@
                             @* </li> *@
                             @* <li class="nav-item"> *@
                             @*     <a class="nav-link text-dark" asp-area="" asp-controller="Measure" asp-action="Create">Add Weight</a> *@
-                            @* </li> *@
-                            @* <li class="nav-item"> *@
-                            @*     <a class="nav-link text-dark" asp-area="" asp-controller="Exercise" asp-action="Create">Add Exercise</a> *@
                             @* </li> *@
                         }
                     </ul>
