--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/WorkoutProgram/GetAll.cshtml
@@ -48,7 +48,7 @@ else
             @foreach (var day in program.Days)
             {
                 <div class="day mb-3">
-                    <h3>Day: @day.DayName</h3>
+                    <h3>@day.DayName</h3>
 
                     <table class="table table-striped">
                         <thead>
