Refactored CSS and JS.

--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Home/Index.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Home/Index.cshtml
@@ -2,7 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mt-8">
+    <h1 class="display-4 mt-5">Welcome to Your Fitness Journey!</h1>
+    <img src="https://m1.quebecormedia.com/emp/emp/haltere56231465-bb68-4bec-8d36-e3809294e0da_ORIGINAL.jpg?impolicy=crop-resize&x=0&y=77&w=4500&h=2535&width=1200"
+         alt="Fitness Dumbbells"
+         class="img-fluid mt-5"
+         style="max-height: 400px; object-fit: contain;">
+    <p class="lead mt-5">Track your workouts, personal bests, and body progress — all in one place.</p>
 </div>
