--- a/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
+++ b/MyFitnessJourney/MyFitnessJourney.Web/Views/Shared/_Layout.cshtml
@@ -6,11 +6,15 @@
     <title>@ViewData["Title"] - MyFitnessJourney.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/createExercise.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/createMeasure.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/createPersonalBest.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/createWorkoutProgram.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MyFitnessJourney.Web.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">My Fitness Journey</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -61,14 +65,15 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @* <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - MyFitnessJourney.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/createWorkoutProgram.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
